--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 </head>
 <body>
+    <script>
+    document.title(UNBLOCKED OOGLE!);
+    </script>
     <iframe src="https://tebahpla.github.io/newerhome" height="700" width="1500"></iframe>
 </body>
 </html>
